--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: formula_parser
 description: A parsing library to parse formulas and evaluate like we use in excel or spreadsheets.
 version: 1.0.0
-# homepage: https://www.example.com
+repository: "https://github.com/sriram10/formula-parser-dart"
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
